2006-11-29 [colin]	2.6.0cvs66

	* src/compose.c
		Followup to cvs60: use original list
		of recipients if replying to a mail
		in Sent Drafts or Queue.

2006-11-27 [paul]	2.6.0cvs65

	* src/image_viewer.c
		revert the last change for now (it's broken)

2006-11-27 [paul]	2.6.0cvs64

	* Makefile.am
	* configure.ac
	* m4/aclocal-include.m4
	* m4/check-type.m4
	* src/Makefile.am
	* src/addr_compl.c
	* src/compose.c
	* src/crash.c
	* src/export.c
	* src/exporthtml.c
	* src/exportldif.c
	* src/imap.c
	* src/import.c
	* src/main.c
	* src/main.h
	* src/matcher.c
	* src/mimeview.c
	* src/procmsg.c
	* src/textview.c
	* src/common/Makefile.am
	* src/common/claws.c
	* src/common/claws.h
	* src/common/ssl.c
	* src/common/sylpheed.c
	* src/common/sylpheed.h
	* src/etpan/Makefile.am
	* src/gtk/Makefile.am
	* src/gtk/claws-marshal.list
	* src/gtk/filesel.c
	* src/gtk/gtksctree.c
	* src/gtk/quicksearch.c
	* src/gtk/sylpheed-marshal.list
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/bogofilter/bogofilter_gtk.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/clamav/clamav_plugin_gtk.c
	* src/plugins/demo/demo.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/Makefile.am
	* src/plugins/pgpcore/claws.def
	* src/plugins/pgpcore/pgp_viewer.c
	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpcore/sylpheed.def
	* src/plugins/pgpinline/Makefile.am
	* src/plugins/pgpinline/claws.def
	* src/plugins/pgpinline/plugin.c
	* src/plugins/pgpinline/sylpheed.def
	* src/plugins/pgpmime/Makefile.am
	* src/plugins/pgpmime/claws.def
	* src/plugins/pgpmime/plugin.c
	* src/plugins/pgpmime/sylpheed.def
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/spamassassin/spamassassin_gtk.c
	* src/plugins/trayicon/trayicon.c
		yet more renaming
		remove deprecated gtk_tooltips_set_delay()

2006-11-26 [paul]	2.6.0cvs63

	* src/expldifdlg.c
	* src/folderview.c
	* src/image_viewer.c
	* src/mainwindow.c
	* src/gtk/gtkutils.c
	* src/gtk/gtkvscrollbutton.c
	* src/gtk/prefswindow.c